# rust_csv_stream

./: Cargo.toml  README.md
no_stream/: Cargo.toml
no_stream/src/: main.rs
solution/: Cargo.toml
solution/src/: main.rs
solution/src/util/: error.rs
static/: no_new_lines.csv
with_stream/: Cargo.toml
with_stream/src/: main.rs
with_stream/src/util/: error.rs
