[package]
name = "solution"
version = "0.1.0"
authors = ["Arnaud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.1"
csv-async = { version = "1.1.2", features = ["with_serde"] }
futures-util = "0.3.12"
log = "0.4.14"
reqwest = { version = "0.11.0", features = ["stream"] }
serde = { version = "1.0.123", features = ["derive"] }

