[package]
name = "with_stream"
version = "0.1.0"
authors = ["Arnaud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.1"
csv = "1.1.5"
futures = "0.3.12"
hyper = { version = "0.14.2", features = ["client","http1","stream"] }
hyper-tls = "0.5.0"
log = "0.4.14"
serde = { version = "1.0.123", features = ["derive"] }
tokio = { version = "1.0.2", features = ["io-util"] }
tokio-util = { version = "0.6.2", features = ["io"] }
